--- a/README
+++ b/README
@@ -1,15 +1,24 @@
 # Crew Promo Exercise 2026
 
-This repository contains SQL solutions for the promotion exercise.
+This repository contains comprehensive SQL solutions for the Crew promotion exercise, covering 6 distinct business domains.
 
-## Problems
+## Problem List
 
-### [Problem 1: Retail Analytics](./Problem-1-Retail)
-- Orders and revenue analysis
-- Latest orders, category revenue, top products, monthly pivots
+| # | Problem | Domain | Key Concepts |
+|---|---------|--------|--------------|
+| 1 | [Retail](./Problem-1-Retail) | Orders & Revenue | Window functions, PIVOT, aggregations |
+| 2 | [Healthcare](./Problem-2-Healthcare) | Appointments & Patient Gaps | Date math, gap analysis, patient journeys |
+| 3 | [AdTech](./Problem-3-AdTech) | Event JSON, Campaign Analytics | JSON parsing, lateral joins, event tracking |
+| 4 | [Finance](./Problem-4-Finance) | Ledger, ACID, Upserts | Transactions, MERGE/UPSERT, normalization |
+| 5 | [HR/Temporal](./Problem-5-HR-Temporal) | Org Charts, Security | Temporal tables, effective dating, row-level security |
+| 6 | [Normalization](./Problem-6-Normalization) | Data Modeling | 1NF, 2NF, 3NF, schema design |
 
-### Problem 2: [Topic] (Coming soon)
-### Problem 3: [Topic] (Coming soon)
-### Problem 4: [Topic] (Coming soon)
-### Problem 5: [Topic] (Coming soon)
-### Problem 6: [Topic] (Coming soon)
+## Setup
+
+Each problem folder contains:
+- `README.md` - Problem description and requirements
+- `data-model/` - Table creation scripts and sample data
+- `queries/` - SQL solutions with comments
+
+## SQL Dialect
+All solutions are written in **SQL Server/T-SQL** (SSMS 17 compatible).
